; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/system/extr_missing_libc_functions.c_getWiiUInterfaceAddressData.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/system/extr_missing_libc_functions.c_getWiiUInterfaceAddressData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifaddrs = type { i64, i64, i64 }
%struct.sockaddr_in = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ifaddrs* ()* @getWiiUInterfaceAddressData to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ifaddrs* @getWiiUInterfaceAddressData() #0 {
  %1 = alloca %struct.ifaddrs*, align 8
  %2 = alloca %struct.ifaddrs*, align 8
  %3 = call %struct.ifaddrs* (...) @buildEmptyIfa()
  store %struct.ifaddrs* %3, %struct.ifaddrs** %2, align 8
  %4 = load %struct.ifaddrs*, %struct.ifaddrs** %2, align 8
  %5 = icmp ne %struct.ifaddrs* %4, null
  br i1 %5, label %6, label %37

6:                                                ; preds = %0
  %7 = load %struct.ifaddrs*, %struct.ifaddrs** %2, align 8
  %8 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to %struct.sockaddr_in*
  %11 = call i64 @getAssignedAddress(%struct.sockaddr_in* %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %35, label %13

13:                                               ; preds = %6
  %14 = load %struct.ifaddrs*, %struct.ifaddrs** %2, align 8
  %15 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.sockaddr_in*
  %18 = call i64 @getAssignedSubnet(%struct.sockaddr_in* %17)
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %35, label %20

20:                                               ; preds = %13
  %21 = load %struct.ifaddrs*, %struct.ifaddrs** %2, align 8
  %22 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = inttoptr i64 %23 to %struct.sockaddr_in*
  %25 = load %struct.ifaddrs*, %struct.ifaddrs** %2, align 8
  %26 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = inttoptr i64 %27 to %struct.sockaddr_in*
  %29 = load %struct.ifaddrs*, %struct.ifaddrs** %2, align 8
  %30 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = inttoptr i64 %31 to %struct.sockaddr_in*
  %33 = call i64 @getBroadcastAddress(%struct.sockaddr_in* %24, %struct.sockaddr_in* %28, %struct.sockaddr_in* %32)
  %34 = icmp slt i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %20, %13, %6
  br label %39

36:                                               ; preds = %20
  br label %37

37:                                               ; preds = %36, %0
  %38 = load %struct.ifaddrs*, %struct.ifaddrs** %2, align 8
  store %struct.ifaddrs* %38, %struct.ifaddrs** %1, align 8
  br label %42

39:                                               ; preds = %35
  %40 = load %struct.ifaddrs*, %struct.ifaddrs** %2, align 8
  %41 = call i32 @freeifaddrs(%struct.ifaddrs* %40)
  store %struct.ifaddrs* null, %struct.ifaddrs** %1, align 8
  br label %42

42:                                               ; preds = %39, %37
  %43 = load %struct.ifaddrs*, %struct.ifaddrs** %1, align 8
  ret %struct.ifaddrs* %43
}

declare dso_local %struct.ifaddrs* @buildEmptyIfa(...) #1

declare dso_local i64 @getAssignedAddress(%struct.sockaddr_in*) #1

declare dso_local i64 @getAssignedSubnet(%struct.sockaddr_in*) #1

declare dso_local i64 @getBroadcastAddress(%struct.sockaddr_in*, %struct.sockaddr_in*, %struct.sockaddr_in*) #1

declare dso_local i32 @freeifaddrs(%struct.ifaddrs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
